package com.socialpulse.app.user.enums;

public enum UserStatus {
    PENDING,
    ACTIVE,
    LOCKED
}
