package com.socialpulse.app.user.enums;

public enum VerificationStatus {
    VERIFIED,
    NOT_VERIFIED,
}
